--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -7,5 +7,11 @@
   "exclude": [
     "test.ts",
     "**/*.spec.ts"
-  ]
+  ],
+  // Dando apelido para caminhos grandes
+  "baseUrl": "src",
+  "paths": {
+    "@app/*": ["app/*"],
+    "@env/*": ["environments/*"]
+  }
 }
